# dreamforge-ai

./: .dockerignore  .env  .gitattributes  ACCEPTANCE_REPORT.md  AGENTS.md  ARCHITECTURE.md  AUDIT_BEFORE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  KNOWN_ISSUES.md  LAUNCH_NOTES.md  README.md  REDDIT_POSTS_DRAFT.md  RESEARCH.md  ROUND4_CHANGELOG.md  ROUND5_ACCEPTANCE_REPORT.md  SHOW_HN_DRAFT.md  docker-compose.yml  out_analysis.json  out_sim.json  pyproject.toml  requirements.dashboard.txt  requirements.txt  settings.yaml  setup.cfg  uploaded_sim_analysis.json
.github/: copilot-instructions.md
.streamlit/: config.toml
api/: main.py  schemas.py
artifacts/: manifest.json
core/: __init__.py  config.py  llm_client.py  llm_registry.py
docs/: COMPATIBILITY_POLICY.md  DEPRECATION_POLICY.md  EDITIONS_AND_PRICING.md  ENTERPRISE.md  INCIDENT_RUNBOOKS.md  OSS_ROADMAP.md  RFC_PROCESS.md
notebooks/: cross_night_emotion_alluvial.ipynb
outputs/: index.json  state-events.jsonl
reports/: sim_ce9c09ce_analysis.md
research&reply/: DreamForge-商業化產品化國際化開發總計劃.md  DreamForge-近100工作流衝刺-修復與產品化執行總計劃.md  dreamforge-項目精簡分析.md
runtest_0027-1604/: dreamforge-sim-f0a34f08-16a0-4476-8c08-adb1ad4f97ea.json  dreamforge-sim-f0a34f08-16a0-4476-8c08-adb1ad4f97ea.txt  hypnogram.csv  memory_edges.csv  memory_nodes.csv  neurochemistry.csv  segments.csv
runtest_0251-1604/: hypnogram.csv  memory_edges.csv  memory_nodes.csv  narrative.txt  neurochemistry.csv  result.json  segments.csv
runtest_0416_0416/: dreamforge-sim-0c06824c-69fa-4196-97e5-1ca4185876bc.json  (+4 more)
(+1992 files in other folders)
