[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["networkx.*", "pandas.*", "scipy.*", "plotly.*", "yaml", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = ["integration: requires mock LLM server"]
